<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:corners="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dragosfotescu.myraco.LoginActivity.LoginActivityFragment"
    style="@style/AppThemeLogin"
    android:theme="@android:style/Theme.Material">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/logo_raco"
        android:contentDescription="@string/app_name"
        android:nestedScrollingEnabled="false"
        android:layout_above="@+id/connect"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:id="@+id/connect"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="#64B5F6"
        android:clickable="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:enabled="true"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:elevation="5dp" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signinlater"
        android:id="@+id/connectlater"
        android:background="#2196F3"
        android:enabled="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:clickable="true"
        android:layout_below="@+id/connect"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
